fixed contact-dialog dark-cont gap

--- a/src/app/components/board/column/column.component.scss
+++ b/src/app/components/board/column/column.component.scss
@@ -35,7 +35,7 @@
 
 .body {
   @include display-column($g: 16px);
-  height: 668px;
+  height: 688px;
   overflow-y: auto;
 }
 
