--- a/src/app/shared/components/dialogs/contact-dialog/contact-dialog.component.scss
+++ b/src/app/shared/components/dialogs/contact-dialog/contact-dialog.component.scss
@@ -13,9 +13,13 @@
 .dark-cont {
   @include box-padding($p: 154px 48px 66px 48px);
   @include size($w: fit-content, $h: 592px);
-  @include display-column($g: 12px);
+  @include display-column($g: 16px);
   background-color: $dark;
   border-radius: 30px 0 0 30px;
+}
+
+.g-32 {
+  gap: 32px;
 }
 
 .logo {
